Set release date

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany Plugins 2.0 (not release date yet)
+Geany Plugins 2.0 (2021-10-19)
 
     General:
     * Require Geany 2.0 as minimum version and so also GTK 3.24
