--- a/README
+++ b/README
@@ -53,6 +53,7 @@ Available plugins are:
 * ``commander`` -- the Commander plugin
 * ``debugger`` -- the Debugger plugin
 * ``defineformat`` -- the Defineformat plugin
+* ``externaltools`` -- the ExternalTools plugin
 * ``geanyctags`` -- the GeanyCtags plugin
 * ``geanydoc`` -- the GeanyDoc plugin
 * ``geanyextrasel`` -- the GeanyExtraSel plugin
