geniuspaste: Port to libsoup3

--- a/geniuspaste/README
+++ b/geniuspaste/README
@@ -36,7 +36,7 @@ configuration shipped with the plugin, please report the issue to:
 Requirements
 ------------
 	* GTK+ >= 2.12
-	* libsoup 2.4 >= 2.4.0
+	* libsoup 3.0
 
 Installation
 ------------
