--- a/vimode/README
+++ b/vimode/README
@@ -182,8 +182,10 @@ Jiří Techet, <techet(at)gmail(dot)com>.
 
 Bug Reports
 -----------
-To report bugs, please use the Geany-Plugins GitHub page at
-https://github.com/geany/geany-plugins/issues
+Please direct all questions, bug reports and patches to the combined geany-plugins
+project at https://github.com/geany/geany-plugins and open the corresponding
+bug report or pull request there. To notify the author of this plugin about
+your post, mention him using his github user name (@techee).
 
 License
 =======
