--- a/geanyctags/README
+++ b/geanyctags/README
@@ -9,9 +9,11 @@ About
 
 GeanyCtags adds a simple support for generating and querying ctags files for a Geany
 project. It requires that the ctags command is installed in a system path. On
-unix systems, distributions usually provide the ctags package; on Windows, the
-ctags binary can be found in the zip Windows distribution from the ctags home
-page (https://ctags.sourceforge.net).
+unix systems, distributions usually provide the ctags (original but orphaned
+and unmaintained) or universal-ctags (forked and maintained) packages. On Windows,
+the universal-ctags binaries can be downloaded from::
+
+    https://github.com/universal-ctags/ctags-win32/releases
 
 Even though Geany supports symbol definition searching by itself within the open files
 (and with a plugin support within the whole project), tag regeneration can become
