--- a/geniuspaste/TODO
+++ b/geniuspaste/TODO
@@ -2,5 +2,7 @@ TODO
 ----
 
     - recent pastes history
-    - URL shortening
-
+    - URL shortening (?)
+    - authentication (per-pastebin)
+    - confirmation dialog/infobar?  pasted data is potentially sensitive
+    - support for Gist, which is likely the most used service
